# shred-rust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CI-Release.yml  CI.yml  rust.yml
src/: files.rs  lib.rs  main.rs  threadpool.rs  utils.rs
