[package]
name = "shred"
version = "0.2.2"
edition = "2018"
authors = ["Juan Jesús Marqués"]
description = """
shred command implementation in rust
"""
repository = "https://github.com/JuanJMarques/shred-rust.git"
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.8.4"
tempfile = "3.2.0"